Base/y.output
   0  $accept : master $end

   1  master : file

   2  file :
   3       | file error ';'
   4       | file public tipo ID ';'
   5       | file public CONST tipo ID ';'
   6       | file public tipo ID init
   7       | file public CONST tipo ID init

   8  $$1 :

   9  file : file public tipo ID $$1 finit

  10  $$2 :

  11  file : file public VOID ID $$2 finit

  12  public :
  13         | PUBLIC

  14  ptr :
  15      | '*'

  16  tipo : INTEGER ptr
  17       | STRING ptr
  18       | NUMBER ptr

  19  init : ATR ID ';'
  20       | ATR INT ';'
  21       | ATR '-' INT ';'
  22       | ATR STR ';'
  23       | ATR CONST STR ';'
  24       | ATR REAL ';'
  25       | ATR '-' REAL ';'

  26  finit : '(' params ')' blocop
  27        | '(' ')' blocop

  28  blocop : ';'
  29         | bloco ';'

  30  params : param
  31         | params ',' param

  32  $$3 :

  33  bloco : '{' $$3 decls list end '}'

  34  decls :
  35        | decls param ';'

  36  param : tipo ID

  37  stmt : base
  38       | brk

  39  base : ';'

  40  $$4 :

  41  base : DO $$4 stmt WHILE expr ';'

  42  $$5 :

  43  base : FOR lv IN expr UPTO expr step DO $$5 stmt

  44  $$6 :

  45  base : FOR lv IN expr DOWNTO expr step DO $$6 stmt
  46       | IF expr THEN stmt
  47       | IF expr THEN stmt ELSE stmt
  48       | expr ';'
  49       | bloco
  50       | lv '#' expr ';'
  51       | error ';'

  52  end :
  53      | brk

  54  brk : BREAK intp ';'
  55      | CONTINUE intp ';'

  56  step :
  57       | STEP expr

  58  intp :
  59       | INT

  60  list : base
  61       | list base

  62  args : expr
  63       | args ',' expr

  64  lv : ID
  65     | ID '[' expr ']'

  66  expr : lv
  67       | '*' lv
  68       | lv ATR expr
  69       | INT
  70       | STR
  71       | REAL
  72       | '-' expr
  73       | '~' expr
  74       | '&' lv
  75       | expr '!'
  76       | INCR lv
  77       | DECR lv
  78       | lv INCR
  79       | lv DECR
  80       | expr '+' expr
  81       | expr '-' expr
  82       | expr '*' expr
  83       | expr '/' expr
  84       | expr '%' expr
  85       | expr '<' expr
  86       | expr '>' expr
  87       | expr GE expr
  88       | expr LE expr
  89       | expr NE expr
  90       | expr '=' expr
  91       | expr '&' expr
  92       | expr '|' expr
  93       | '(' expr ')'
  94       | ID '(' args ')'
  95       | ID '(' ')'

state 0
	$accept : . master $end  (0)
	file : .  (2)

	.  reduce 2

	master  goto 1
	file  goto 2


state 1
	$accept : master . $end  (0)

	$end  accept


state 2
	master : file .  (1)
	file : file . error ';'  (3)
	file : file . public tipo ID ';'  (4)
	file : file . public CONST tipo ID ';'  (5)
	file : file . public tipo ID init  (6)
	file : file . public CONST tipo ID init  (7)
	file : file . public tipo ID $$1 finit  (9)
	file : file . public VOID ID $$2 finit  (11)
	public : .  (12)

	error  shift 3
	PUBLIC  shift 4
	$end  reduce 1
	VOID  reduce 12
	INTEGER  reduce 12
	STRING  reduce 12
	NUMBER  reduce 12
	CONST  reduce 12

	public  goto 5


state 3
	file : file error . ';'  (3)

	';'  shift 6
	.  error


state 4
	public : PUBLIC .  (13)

	.  reduce 13


state 5
	file : file public . tipo ID ';'  (4)
	file : file public . CONST tipo ID ';'  (5)
	file : file public . tipo ID init  (6)
	file : file public . CONST tipo ID init  (7)
	file : file public . tipo ID $$1 finit  (9)
	file : file public . VOID ID $$2 finit  (11)

	VOID  shift 7
	INTEGER  shift 8
	STRING  shift 9
	NUMBER  shift 10
	CONST  shift 11
	.  error

	tipo  goto 12


state 6
	file : file error ';' .  (3)

	.  reduce 3


state 7
	file : file public VOID . ID $$2 finit  (11)

	ID  shift 13
	.  error


state 8
	tipo : INTEGER . ptr  (16)
	ptr : .  (14)

	'*'  shift 14
	ID  reduce 14

	ptr  goto 15


state 9
	tipo : STRING . ptr  (17)
	ptr : .  (14)

	'*'  shift 14
	ID  reduce 14

	ptr  goto 16


state 10
	tipo : NUMBER . ptr  (18)
	ptr : .  (14)

	'*'  shift 14
	ID  reduce 14

	ptr  goto 17


state 11
	file : file public CONST . tipo ID ';'  (5)
	file : file public CONST . tipo ID init  (7)

	INTEGER  shift 8
	STRING  shift 9
	NUMBER  shift 10
	.  error

	tipo  goto 18


state 12
	file : file public tipo . ID ';'  (4)
	file : file public tipo . ID init  (6)
	file : file public tipo . ID $$1 finit  (9)

	ID  shift 19
	.  error


state 13
	file : file public VOID ID . $$2 finit  (11)
	$$2 : .  (10)

	.  reduce 10

	$$2  goto 20


state 14
	ptr : '*' .  (15)

	.  reduce 15


state 15
	tipo : INTEGER ptr .  (16)

	.  reduce 16


state 16
	tipo : STRING ptr .  (17)

	.  reduce 17


state 17
	tipo : NUMBER ptr .  (18)

	.  reduce 18


state 18
	file : file public CONST tipo . ID ';'  (5)
	file : file public CONST tipo . ID init  (7)

	ID  shift 21
	.  error


state 19
	file : file public tipo ID . ';'  (4)
	file : file public tipo ID . init  (6)
	file : file public tipo ID . $$1 finit  (9)
	$$1 : .  (8)

	ATR  shift 22
	';'  shift 23
	'('  reduce 8

	init  goto 24
	$$1  goto 25


state 20
	file : file public VOID ID $$2 . finit  (11)

	'('  shift 26
	.  error

	finit  goto 27


state 21
	file : file public CONST tipo ID . ';'  (5)
	file : file public CONST tipo ID . init  (7)

	ATR  shift 22
	';'  shift 28
	.  error

	init  goto 29


state 22
	init : ATR . ID ';'  (19)
	init : ATR . INT ';'  (20)
	init : ATR . '-' INT ';'  (21)
	init : ATR . STR ';'  (22)
	init : ATR . CONST STR ';'  (23)
	init : ATR . REAL ';'  (24)
	init : ATR . '-' REAL ';'  (25)

	INT  shift 30
	REAL  shift 31
	ID  shift 32
	STR  shift 33
	CONST  shift 34
	'-'  shift 35
	.  error


state 23
	file : file public tipo ID ';' .  (4)

	.  reduce 4


state 24
	file : file public tipo ID init .  (6)

	.  reduce 6


state 25
	file : file public tipo ID $$1 . finit  (9)

	'('  shift 26
	.  error

	finit  goto 36


state 26
	finit : '(' . params ')' blocop  (26)
	finit : '(' . ')' blocop  (27)

	INTEGER  shift 8
	STRING  shift 9
	NUMBER  shift 10
	')'  shift 37
	.  error

	tipo  goto 38
	params  goto 39
	param  goto 40


state 27
	file : file public VOID ID $$2 finit .  (11)

	.  reduce 11


state 28
	file : file public CONST tipo ID ';' .  (5)

	.  reduce 5


state 29
	file : file public CONST tipo ID init .  (7)

	.  reduce 7


state 30
	init : ATR INT . ';'  (20)

	';'  shift 41
	.  error


state 31
	init : ATR REAL . ';'  (24)

	';'  shift 42
	.  error


state 32
	init : ATR ID . ';'  (19)

	';'  shift 43
	.  error


state 33
	init : ATR STR . ';'  (22)

	';'  shift 44
	.  error


state 34
	init : ATR CONST . STR ';'  (23)

	STR  shift 45
	.  error


state 35
	init : ATR '-' . INT ';'  (21)
	init : ATR '-' . REAL ';'  (25)

	INT  shift 46
	REAL  shift 47
	.  error


state 36
	file : file public tipo ID $$1 finit .  (9)

	.  reduce 9


state 37
	finit : '(' ')' . blocop  (27)

	';'  shift 48
	'{'  shift 49
	.  error

	blocop  goto 50
	bloco  goto 51


state 38
	param : tipo . ID  (36)

	ID  shift 52
	.  error


state 39
	finit : '(' params . ')' blocop  (26)
	params : params . ',' param  (31)

	')'  shift 53
	','  shift 54
	.  error


state 40
	params : param .  (30)

	.  reduce 30


state 41
	init : ATR INT ';' .  (20)

	.  reduce 20


state 42
	init : ATR REAL ';' .  (24)

	.  reduce 24


state 43
	init : ATR ID ';' .  (19)

	.  reduce 19


state 44
	init : ATR STR ';' .  (22)

	.  reduce 22


state 45
	init : ATR CONST STR . ';'  (23)

	';'  shift 55
	.  error


state 46
	init : ATR '-' INT . ';'  (21)

	';'  shift 56
	.  error


state 47
	init : ATR '-' REAL . ';'  (25)

	';'  shift 57
	.  error


state 48
	blocop : ';' .  (28)

	.  reduce 28


state 49
	bloco : '{' . $$3 decls list end '}'  (33)
	$$3 : .  (32)

	.  reduce 32

	$$3  goto 58


state 50
	finit : '(' ')' blocop .  (27)

	.  reduce 27


state 51
	blocop : bloco . ';'  (29)

	';'  shift 59
	.  error


state 52
	param : tipo ID .  (36)

	.  reduce 36


state 53
	finit : '(' params ')' . blocop  (26)

	';'  shift 48
	'{'  shift 49
	.  error

	blocop  goto 60
	bloco  goto 51


state 54
	params : params ',' . param  (31)

	INTEGER  shift 8
	STRING  shift 9
	NUMBER  shift 10
	.  error

	tipo  goto 38
	param  goto 61


state 55
	init : ATR CONST STR ';' .  (23)

	.  reduce 23


state 56
	init : ATR '-' INT ';' .  (21)

	.  reduce 21


state 57
	init : ATR '-' REAL ';' .  (25)

	.  reduce 25


state 58
	bloco : '{' $$3 . decls list end '}'  (33)
	decls : .  (34)

	.  reduce 34

	decls  goto 62


state 59
	blocop : bloco ';' .  (29)

	.  reduce 29


state 60
	finit : '(' params ')' blocop .  (26)

	.  reduce 26


state 61
	params : params ',' param .  (31)

	.  reduce 31


state 62
	bloco : '{' $$3 decls . list end '}'  (33)
	decls : decls . param ';'  (35)

	error  shift 63
	INT  shift 64
	REAL  shift 65
	ID  shift 66
	STR  shift 67
	DO  shift 68
	IF  shift 69
	FOR  shift 70
	INTEGER  shift 8
	STRING  shift 9
	NUMBER  shift 10
	INCR  shift 71
	DECR  shift 72
	'&'  shift 73
	'~'  shift 74
	'-'  shift 75
	'*'  shift 76
	'('  shift 77
	';'  shift 78
	'{'  shift 49
	.  error

	tipo  goto 38
	bloco  goto 79
	param  goto 80
	base  goto 81
	list  goto 82
	lv  goto 83
	expr  goto 84


state 63
	base : error . ';'  (51)

	';'  shift 85
	.  error


state 64
	expr : INT .  (69)

	.  reduce 69


state 65
	expr : REAL .  (71)

	.  reduce 71


state 66
	lv : ID .  (64)
	lv : ID . '[' expr ']'  (65)
	expr : ID . '(' args ')'  (94)
	expr : ID . '(' ')'  (95)

	'['  shift 86
	'('  shift 87
	DO  reduce 64
	THEN  reduce 64
	UPTO  reduce 64
	DOWNTO  reduce 64
	STEP  reduce 64
	INCR  reduce 64
	DECR  reduce 64
	ATR  reduce 64
	'|'  reduce 64
	'&'  reduce 64
	'='  reduce 64
	NE  reduce 64
	GE  reduce 64
	LE  reduce 64
	'>'  reduce 64
	'<'  reduce 64
	'+'  reduce 64
	'-'  reduce 64
	'*'  reduce 64
	'/'  reduce 64
	'%'  reduce 64
	'!'  reduce 64
	';'  reduce 64
	')'  reduce 64
	','  reduce 64
	'#'  reduce 64
	']'  reduce 64


state 67
	expr : STR .  (70)

	.  reduce 70


state 68
	base : DO . $$4 stmt WHILE expr ';'  (41)
	$$4 : .  (40)

	.  reduce 40

	$$4  goto 88


state 69
	base : IF . expr THEN stmt  (46)
	base : IF . expr THEN stmt ELSE stmt  (47)

	INT  shift 64
	REAL  shift 65
	ID  shift 66
	STR  shift 67
	INCR  shift 71
	DECR  shift 72
	'&'  shift 73
	'~'  shift 74
	'-'  shift 75
	'*'  shift 76
	'('  shift 77
	.  error

	lv  goto 89
	expr  goto 90


state 70
	base : FOR . lv IN expr UPTO expr step DO $$5 stmt  (43)
	base : FOR . lv IN expr DOWNTO expr step DO $$6 stmt  (45)

	ID  shift 91
	.  error

	lv  goto 92


state 71
	expr : INCR . lv  (76)

	ID  shift 91
	.  error

	lv  goto 93


state 72
	expr : DECR . lv  (77)

	ID  shift 91
	.  error

	lv  goto 94


state 73
	expr : '&' . lv  (74)

	ID  shift 91
	.  error

	lv  goto 95


state 74
	expr : '~' . expr  (73)

	INT  shift 64
	REAL  shift 65
	ID  shift 66
	STR  shift 67
	INCR  shift 71
	DECR  shift 72
	'&'  shift 73
	'~'  shift 74
	'-'  shift 75
	'*'  shift 76
	'('  shift 77
	.  error

	lv  goto 89
	expr  goto 96


state 75
	expr : '-' . expr  (72)

	INT  shift 64
	REAL  shift 65
	ID  shift 66
	STR  shift 67
	INCR  shift 71
	DECR  shift 72
	'&'  shift 73
	'~'  shift 74
	'-'  shift 75
	'*'  shift 76
	'('  shift 77
	.  error

	lv  goto 89
	expr  goto 97


state 76
	expr : '*' . lv  (67)

	ID  shift 91
	.  error

	lv  goto 98


state 77
	expr : '(' . expr ')'  (93)

	INT  shift 64
	REAL  shift 65
	ID  shift 66
	STR  shift 67
	INCR  shift 71
	DECR  shift 72
	'&'  shift 73
	'~'  shift 74
	'-'  shift 75
	'*'  shift 76
	'('  shift 77
	.  error

	lv  goto 89
	expr  goto 99


state 78
	base : ';' .  (39)

	.  reduce 39


state 79
	base : bloco .  (49)

	.  reduce 49


state 80
	decls : decls param . ';'  (35)

	';'  shift 100
	.  error


state 81
	list : base .  (60)

	.  reduce 60


state 82
	bloco : '{' $$3 decls list . end '}'  (33)
	list : list . base  (61)
	end : .  (52)

	error  shift 63
	INT  shift 64
	REAL  shift 65
	ID  shift 66
	STR  shift 67
	DO  shift 68
	IF  shift 69
	FOR  shift 70
	BREAK  shift 101
	CONTINUE  shift 102
	INCR  shift 71
	DECR  shift 72
	'&'  shift 73
	'~'  shift 74
	'-'  shift 75
	'*'  shift 76
	'('  shift 77
	';'  shift 78
	'{'  shift 49
	'}'  reduce 52

	bloco  goto 79
	base  goto 103
	end  goto 104
	brk  goto 105
	lv  goto 83
	expr  goto 84


state 83
	base : lv . '#' expr ';'  (50)
	expr : lv .  (66)
	expr : lv . ATR expr  (68)
	expr : lv . INCR  (78)
	expr : lv . DECR  (79)

	INCR  shift 106
	DECR  shift 107
	ATR  shift 108
	'#'  shift 109
	'|'  reduce 66
	'&'  reduce 66
	'='  reduce 66
	NE  reduce 66
	GE  reduce 66
	LE  reduce 66
	'>'  reduce 66
	'<'  reduce 66
	'+'  reduce 66
	'-'  reduce 66
	'*'  reduce 66
	'/'  reduce 66
	'%'  reduce 66
	'!'  reduce 66
	';'  reduce 66


state 84
	base : expr . ';'  (48)
	expr : expr . '!'  (75)
	expr : expr . '+' expr  (80)
	expr : expr . '-' expr  (81)
	expr : expr . '*' expr  (82)
	expr : expr . '/' expr  (83)
	expr : expr . '%' expr  (84)
	expr : expr . '<' expr  (85)
	expr : expr . '>' expr  (86)
	expr : expr . GE expr  (87)
	expr : expr . LE expr  (88)
	expr : expr . NE expr  (89)
	expr : expr . '=' expr  (90)
	expr : expr . '&' expr  (91)
	expr : expr . '|' expr  (92)

	'|'  shift 110
	'&'  shift 111
	'='  shift 112
	NE  shift 113
	GE  shift 114
	LE  shift 115
	'>'  shift 116
	'<'  shift 117
	'+'  shift 118
	'-'  shift 119
	'*'  shift 120
	'/'  shift 121
	'%'  shift 122
	'!'  shift 123
	';'  shift 124
	.  error


state 85
	base : error ';' .  (51)

	.  reduce 51


state 86
	lv : ID '[' . expr ']'  (65)

	INT  shift 64
	REAL  shift 65
	ID  shift 66
	STR  shift 67
	INCR  shift 71
	DECR  shift 72
	'&'  shift 73
	'~'  shift 74
	'-'  shift 75
	'*'  shift 76
	'('  shift 77
	.  error

	lv  goto 89
	expr  goto 125


state 87
	expr : ID '(' . args ')'  (94)
	expr : ID '(' . ')'  (95)

	INT  shift 64
	REAL  shift 65
	ID  shift 66
	STR  shift 67
	INCR  shift 71
	DECR  shift 72
	'&'  shift 73
	'~'  shift 74
	'-'  shift 75
	'*'  shift 76
	'('  shift 77
	')'  shift 126
	.  error

	args  goto 127
	lv  goto 89
	expr  goto 128


state 88
	base : DO $$4 . stmt WHILE expr ';'  (41)

	error  shift 63
	INT  shift 64
	REAL  shift 65
	ID  shift 66
	STR  shift 67
	DO  shift 68
	IF  shift 69
	FOR  shift 70
	BREAK  shift 101
	CONTINUE  shift 102
	INCR  shift 71
	DECR  shift 72
	'&'  shift 73
	'~'  shift 74
	'-'  shift 75
	'*'  shift 76
	'('  shift 77
	';'  shift 78
	'{'  shift 49
	.  error

	bloco  goto 79
	base  goto 129
	stmt  goto 130
	brk  goto 131
	lv  goto 83
	expr  goto 84


state 89
	expr : lv .  (66)
	expr : lv . ATR expr  (68)
	expr : lv . INCR  (78)
	expr : lv . DECR  (79)

	INCR  shift 106
	DECR  shift 107
	ATR  shift 108
	DO  reduce 66
	THEN  reduce 66
	UPTO  reduce 66
	DOWNTO  reduce 66
	STEP  reduce 66
	'|'  reduce 66
	'&'  reduce 66
	'='  reduce 66
	NE  reduce 66
	GE  reduce 66
	LE  reduce 66
	'>'  reduce 66
	'<'  reduce 66
	'+'  reduce 66
	'-'  reduce 66
	'*'  reduce 66
	'/'  reduce 66
	'%'  reduce 66
	'!'  reduce 66
	';'  reduce 66
	')'  reduce 66
	','  reduce 66
	']'  reduce 66

